cafeingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Cafe-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url : "true"
spec:
  tls:
  - hosts:
    - cafe.example.com
    secretName: nginx-ingress-tls
  rules:
  - host: "test.example.net.in"
    http:
      paths:
      - pathType: Prefix
        path: "/tea"
        backend:
          service:
            name: tea-svc
            port:
              number: 8081
      - pathType: Prefix
        path: "/coffee"
        backend:
          service:
            name: coffee-svc
            port:
              number: 8082
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: coffee-svc
            port:
              number: 8082
